# Baymax_v1.0

./: .gitignore  CMakeLists.txt  README.md
baymax_core/: baymax.cpp
baymax_core/graphics/: shader.cpp  shader.h  window.cpp  window.h
baymax_core/graphics/buffers/: buffer.cpp  buffer.h  buffers.h  indexbuffer.cpp  indexbuffer.h  vertexarray.cpp  vertexarray.h
baymax_core/include/: window.h
baymax_core/maths/: mathUtils.h  maths.h  matr4.cpp  matr4.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
baymax_core/src/: window.cpp
baymax_core/utils/: fileutils.h
shaders/: basic.frag  basic.vert
tests/: math_test.cpp
